@@ -121,22 +121,27 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	    return( TCL_ERROR);		/** -------- EXIT (FAILURE) -------> **/
     }
   
+    if( !strcmp(argv[1], "type")) {
+    /**
+     **  'module-info type'
+     **   returns 'C' to refer to the C-version of modules
+     **   (the Tcl-only version returns 'Tcl')
+     **/
+	    Tcl_SetResult( interp, "C", TCL_STATIC);
+
+    } else if( !strcmp( argv[1], "flags")) {
     /**
      **  'module-info flags' ?
      **/
-
-    if( !strcmp( argv[1], "flags")) {
         char tmpbuf[6];
         sprintf( tmpbuf, "%d", g_flags);
         Tcl_SetResult( interp, tmpbuf, TCL_VOLATILE);
 
+    } else if( !strcmp( argv[1], "mode")) {
     /**
      **  'module-info mode'
      **  without suggestion this will return the name of the state we're in.
      **/
-
-    } else if( !strcmp( argv[1], "mode")) {
-
         if( argc < 3) {
             if( g_flags & M_SWSTATE1)
                 Tcl_SetResult( interp, "switch1", TCL_STATIC);
@@ -205,13 +210,11 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	    }
 	}
 
+    } else if( !strcmp( argv[1], "user")) {
     /**
      **  'module-info user'
      **  without suggestion this will return the current user level
      **/
-
-    } else if( !strcmp( argv[1], "user")) {
-
         if( argc < 3) {
             if( UL_NOVICE == sw_userlvl)
                 Tcl_SetResult( interp, "novice", TCL_STATIC);
@@ -250,20 +253,18 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	    }
 	}
 
+    } else if( !strcmp(argv[1], "name")) {
     /**
      **  'module-info name'
      **  returns the name of the current module
      **/
-
-    } else if( !strcmp(argv[1], "name")) {
         Tcl_SetResult( interp, g_current_module, TCL_VOLATILE);
 
+    } else if( !strcmp(argv[1], "shell")) {
     /**
      **  'module-info shell'
      **  returns the name of the current user shell
      **/
-
-    } else if( !strcmp(argv[1], "shell")) {
         if( argc < 3) {
 	    Tcl_SetResult( interp, shell_name, TCL_VOLATILE);
         } else {
@@ -274,6 +275,10 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	}
 
     } else if( !strcmp(argv[1], "shelltype")) {
+    /**
+     **  'module-info shelltype'
+     **  returns the name of the current user shelltype family
+     **/
         if( argc < 3) {
 	    Tcl_SetResult( interp, shell_derelict, TCL_VOLATILE);
         } else {
@@ -283,12 +288,11 @@ int	cmdModuleInfo(	ClientData	 client_data,
 		Tcl_SetResult( interp, "0", TCL_STATIC);
 	}
 
+    } else if( !strcmp(argv[1], "trace")) {
     /**
      **  'module-info trace'
      **  Check whether tracing is turned on
      **/
-
-    } else if( !strcmp(argv[1], "trace")) {
 	char *cmd, *module;
 
 	if( argc > 2) 
@@ -319,13 +323,11 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	else
 	    Tcl_SetResult( interp, pattern, TCL_VOLATILE);
 
+    } else if( !strcmp(argv[1], "alias")) {
     /**
      **  'module-info alias'
      **  Print the value of the passed alias
      **/
-
-    } else if( !strcmp(argv[1], "alias")) {
-
 	if( argc < 3) {
 	    if( OK != ErrorLogger( ERR_USAGE, LOC, argv[0], "alias ",
 		"name", NULL))
@@ -342,12 +344,11 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	    Tcl_SetResult( interp, "*undef*", TCL_STATIC);
 	}
 
+    } else if( !strcmp(argv[1], "symbols")) {
     /**
      **  'module-info symbols'
      **  List all symbolic names of the passed or current module file
      **/
-
-    } else if( !strcmp(argv[1], "symbols")) {
 	char *name;
 
 	name = (argc < 3) ? g_current_module : (char *) argv[2];
@@ -357,13 +358,12 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	else
 	    Tcl_SetResult( interp, (char *) s, TCL_VOLATILE);
 
+    } else if( !strcmp(argv[1], "version")) {
     /**
      **  'module-info version'
      **  Returns the full qualified module name and version of the passed
      **  symbolic version specifier
      **/
-
-    } else if( !strcmp(argv[1], "version")) {
 	if( VersionLookup( (char *) argv[2], &s, &t)) {
 	    if( t) {
 		/* sprintf( buf, "%s/%s", s, t); */
@@ -379,12 +379,11 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	    Tcl_SetResult( interp, "*undef*", TCL_STATIC);
 	}
 
+    } else if( !strcmp(argv[1], "specified")) {
     /**
      **  'module-info specified'
      **   gives the module name as specified on the command line
      **/
-
-    } else if( !strcmp(argv[1], "specified")) {
 	if( g_specified_module) {
 	    /* TCL_STATIC because it comes from the command line */
 	    Tcl_SetResult( interp, g_specified_module, TCL_STATIC);
@@ -392,11 +391,10 @@ int	cmdModuleInfo(	ClientData	 client_data,
 	    Tcl_SetResult( interp, "*undef*", TCL_STATIC);
 	}
 
+    } else {
     /**
      **  unknown command ....
      **/
-
-    } else {
 	if( OK != ErrorLogger( ERR_INFO_DESCR, LOC, argv[1], NULL))
 	    return( TCL_ERROR);		/** -------- EXIT (FAILURE) -------> **/
     }
