@@ -18,6 +18,10 @@ Modules 3.2.10
 	* Fixed the segfault problem with Tcl_RegExpCompile() (Kenneth Hoste,
 	  Tyson Whitehead)
 	* Updated the FSF address in LICENSE.GPL (Jan Synacek)
+	* Forked the Tcl-only version to be maintained by Kent Mein.
+	* Added the "module-info type" query to return 'C' to indicate that
+	  the modulecmd executable is the "C" version.
+	  (The Tcl-only version will return 'Tcl'.)
 
 Modules 3.2.9
 Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
